header navigation tablet styles fixed

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -71,6 +71,15 @@
     flex-flow: row wrap;
   }
 
+  .main-nav__toggle {
+    display: none;
+  }
+
+  .page-header__logo-image {
+    width: 113px;
+    height: 46px;
+  }
+
   .main-nav__list {
     display: flex;
   }
@@ -78,6 +87,9 @@
   .main-nav__list--site {
     order: 1;
     width: 100%;
+
+    font-size: 15px;
+    line-height: 1.6;
   }
 
   .main-nav__list--user {
@@ -85,12 +97,16 @@
   }
 
   .main-nav__list-link {
-    padding: 0;
+    //padding: 0;
   }
 
   .main-nav__list-item {
-    margin-right: 30px;
+    //margin-right: 30px;
     border: none;
+  }
+
+  .user-list__item--search {
+    font-size: 0;
   }
 }
 
