--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -7,3 +7,13 @@
 .site-list__link {
   text-decoration: none;
 }
+
+@media (min-width: $tablet-width) {
+  .site-list__item {
+    margin-right: 36px;
+  }
+
+  .site-list__link {
+    padding-top: 17px;
+  }
+}
